--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   hive_flutter: ^1.1.0
   hive: ^2.2.3
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
